--- a/src/index.scss
+++ b/src/index.scss
@@ -63,13 +63,29 @@ h3 > a {
   height: 803px;
   width: 901px;
 
-  @media screen and (max-width: 1000px){
+  @media screen and (max-width: 1000px) {
     background: #ffffff;
+  }
+}
+
+.custom-link {
+  padding-top: 5px;
+  text-align: right;
+  text-transform: uppercase;
+  text-decoration: underline;
+  font-weight: bold;
+  color: $color_primary;
+
+  @media screen and (max-width: 1000px) {
+    width: 100%;
+    text-align: center;
+    margin: 10px 0 10px 0;
   }
 }
 
 .change-password {
   width: 50%;
+  max-width: 700px;
 
   & form {
     width: 100%;
@@ -77,18 +93,23 @@ h3 > a {
 
   .form-input {
     display: flex;
-    flex-direction: row;
     padding: 10px 0 10px 0;
     align-items: center;
   }
 
   .form-button {
+    width: 50%;
+    max-width: 300px;
     display: flex;
     justify-content: flex-start;
     padding-top: 10px;
+
+    &.change-password {
+      width: 100%;
+
+      max-width: 300px;
+    }
   }
-
-
 
   & h4 {
     font-size: 40px;
@@ -107,12 +128,48 @@ h3 > a {
     color: $color_label;
     font-weight: bold;
   }
+
+  & .submit-btns {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding-top: 15px;
+
+    & .second {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+    }
+  }
+
   @media screen and (max-width: 1000px) {
     width: 100%;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
+
+    & .submit-btns {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding-top: 15px;
+      align-items: center;
+
+      & span {
+        font-size: 80%;
+      }
+
+      & .second {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+    }
 
     & h4 {
       font-size: 30px;
@@ -133,6 +190,8 @@ h3 > a {
     }
 
     .form-button {
+      width: 80%;
+      max-width: 300px;
       display: flex;
       justify-content: center;
     }
@@ -141,17 +200,30 @@ h3 > a {
 
 .custom-btn {
   display: flex;
-  align-items: center;
   justify-content: center;
   border: none;
   background-color: $color_primary;
   color: white;
-  padding: 10px 15px 10px 15px;
+  padding: 10px 10px 10px 10px;
   width: 40%;
   text-transform: uppercase;
+  vertical-align: middle;
+
+  & span {
+    color: white;
+    vertical-align: middle;
+  }
 
   @media screen and (max-width: 1100px) {
     width: auto;
+  }
+}
+
+.custom-btn.reg {
+  background-color: $color_secondary;
+  width: 50%;
+  @media screen and (max-width: 1000px){
+    width: 100%;
   }
 }
 
